<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appActivites.managementActivities.AddProductActivity">

    <EditText
        android:id="@+id/stockNrInput"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="stock nr"
        android:inputType="number"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/productAddBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priesInput" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Title"
        android:inputType="textPersonName"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/descriptionInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeInput" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="360dp"
        android:layout_height="131dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="start|top"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/priesInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />

    <EditText
        android:id="@+id/codeInput"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Code ID"
        android:inputType="number"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/titleInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priesInput"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Pries"
        android:inputType="number"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/stockNrInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />

    <Button
        android:id="@+id/productAddBtn"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/Orange"
        android:fontFamily="sans-serif"
        android:text="Add"
        android:textSize="11pt"
        app:layout_constraintBottom_toTopOf="@+id/addSuccessText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockNrInput" />

    <TextView
        android:id="@+id/addSuccessText"
        android:layout_width="360dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="161dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/LimeGreen"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productAddBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>