<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/help"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:text="Help"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordersBtn"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/changePass"
        android:layout_width="148dp"
        android:layout_height="32dp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="80dp"
        android:text="Change Password"
        android:textAlignment="center"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/logout"
        app:layout_constraintTop_toBottomOf="@+id/ordersBtn"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/ordersBtn"
        android:layout_width="270dp"
        android:layout_height="193dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="164dp"
        android:text="Orders Management"
        android:textSize="12pt"
        android:fontFamily="sans-serif"
        android:backgroundTint="@color/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/productsBtn"
        android:layout_width="270dp"
        android:layout_height="193dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="Products Management"
        android:fontFamily="sans-serif"
        android:backgroundTint="@color/Orange"
        android:textSize="12pt"
        app:layout_constraintBottom_toTopOf="@+id/ordersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="Logout"
        android:textAlignment="center"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ordersBtn"
        app:layout_constraintVertical_bias="0.054" />
</androidx.constraintlayout.widget.ConstraintLayout>