<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newPassFeld"
        android:layout_width="360dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/passChangeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNewPass" />

    <TextView
        android:id="@+id/enterNewPass"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="Enter new password:"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/newPassFeld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassFeld" />

    <TextView
        android:id="@+id/enterOldPass"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif"
        android:text="Enter old password:"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/oldPassFeld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/oldPassFeld"
        android:layout_width="360dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/enterNewPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterOldPass" />

    <Button
        android:id="@+id/passChangeBtn"
        android:layout_width="360dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="356dp"
        android:backgroundTint="@color/Orange"
        android:fontFamily="sans-serif"
        android:text="Change"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassFeld" />

</androidx.constraintlayout.widget.ConstraintLayout>